Add Delete endpoints for sessions and to fix some bugs
